syntax = "proto3";
option go_package="./proto/bank";

service BankService {
  rpc Create(CreateBankRequest) returns (BankProfileResponse);
  rpc Read(SingleBankRequest) returns (BankProfileResponse);
  rpc Update(UpdateBankRequest) returns (SuccessResponse);
  rpc Delete(SingleBankRequest) returns (SuccessResponse);
}

message CreateBankRequest{
  string name = 1;
  int64 code = 2;
}

message SingleBankRequest{
  string id = 1;
}

message BankProfileResponse{
  int64 id = 1;
  string name = 2;
  int64 code = 3;
}

message SuccessResponse{
  string response = 1;
}


message UpdateBankRequest{
  int64 id = 1;
  string name = 2;
}